<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slatol3d_description</name>
  <version>1.0.0</version>
  <description>3-Axis Single-Legged Autonomous Takeoff and Landing (SLATOL) model for Gazebo Fortress.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros ignition_model_path="${prefix}/share/slatol3d_description/"/>
  </export>
</package>